# MAIlabs

./: .gitignore  README.md  Текстовый документ.txt
KP1/: КП 1 Белоносов.rar
KP2/: КП 2 Белоносов.rar
KP3/: main  main.txt
KP4/: a.out  main  main.c  Белоносов КП4.docx
KP6/: CMakeLists.txt  Makefile  count  count.c  generate  input  main  main.c  print  table.c
KP6VictorTest/: adders.c  adders.h  execute.c  generate.c  input.c  print.c  printers.h  structure.c  structure.h
KP6VictorTest/db/: api.h  clause.c  clause.h  io.c  io.h  iterator.c  iterator.h  table.c  table.h  tuple.c  tuple.h
KP7/: CMakeLists.txt  main.c  matrix.c  matrix.h
KP8/: CMakeLists.txt  iterator.h
KP9/: CMakeLists.txt  main.c  map.c  map.h
QT/LessonProjects/: Counter.cpp  Counter.h  LessonProjects.pro  MyGraphicsView.cpp  MyGraphicsView.h  calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclass.h  mywidget.cpp  mywidget.h  paint.cpp  paint.h  paint.ui  paintscene.cpp  paintscene.h  vertex.h
QT/Testificate/: mainwindow.cpp  mainwindow.ui
QT/build-LessonProjects-Desktop_Qt_6_2_0_MinGW_64_bit-Debug-Xlint/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QT/build-Testificate-Desktop_Qt_6_2_2_MinGW_64_bit-Debug-Xlint/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Recognitor-master/: demoapp.sln
Recognitor-master/demoapp/: Form1.Designer.cs  Form1.cs  IView.cs  Presenter.cs  Program.cs  demoapp.csproj
SEM1/FUND/: README.md
SEM2/DM/: Otchet_Belonosov103.docx  README.md
SEM2/FUND/: README.md
SEM2/FUND/lab23/prog/: CMakeLists.txt
SEM2/FUND/ref2/NeuralNetwork/: CMakeLists.txt
SEM4/DA/: .gitignore
SEM6/Crypto/kp/pythonProject/: main.py  pyproject.toml
SEM6/Crypto/lab3/: .gitignore  main.py  pyproject.toml  ЛР_№3_Белоносов_Кирилл_Алексеевич_М8О-308Б-21.docx
SEM6/MO/: Newton-Rafson.py  gradient.py  polak-ribrere.py
SEM6/NM/lab3/: CMakeLists.txt  NMlab3_1.cpp  NMlab3_2.cpp  NMlab3_3.cpp  NMlab3_4.cpp  NMlab3_5.cpp  Polynoms.h  main.cpp  matplotlibcpp.h  ЛР3_Белоносов_Кирилл_Алексеевич_М8О-308Б-21.docx
SEM7/NM/kp/: CMakeLists.txt  CourseProject.cpp  Galerkin.cpp  Galerkin.hpp
Stepik/: .hello.h.swp  input.txt  main.cpp  output.txt  square.cpp  square.hpp  test  test.c
Stepik/fullTreeOfExpression/: lexer.c  lexer.h  main.c  parser.c  parser.h  printer.c  symbolic  (+3 more)
Test/: a.out  main  main.c
Zachet/: delete  main.c  tree_height.c
lab11/: Lab11Otchet.docx  a.out  main  main.c
lab12/: a.out  input.txt  main  main.s
lab13/: Lab13Otchet.docx  a.out  input.txt  main  main.c
lab14/: a.out  main  main.c  main.s
lab15/: Lab15Otchet.docx  a.out  main  main.c
lab20/: Lab20Otchet.docx  Protocol  Task.txt  script.awk  script.sh  testfile
lab21/: 3.txt  NewFile.txt  catf.sh  main  main.c
lab22/: Lab22Otchet.docx
lab23/: 1.c  2.c  3.c  4.c  CMakeLists.txt  main.c  node.c  node.h
lab24/: CMakeLists.txt  Makefile  example_formula.txt  lab24  lexer  lexer.c  lexer.h  main.c  parser.c  parser.h  printer.c  printer.h  symbolic  transform.c  transform.h  tree.c  tree.h
lab26/: CMakeLists.txt  Makefile  deque.c  deque.h  main  main.c  queue.c  queue.h  stack.c  vector.c  vector.h
lab8/: 19.txt  main  main.c  main.s
papka/: func.c  hello.h  main.c
pythonProject/: main.py
ref2/: BelonosovRef2.docx
(+659 files in other folders)
