[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["Kirill Belonosov <kirillbelonosov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
