[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Kirill Belonosov <kirillbelonosov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^42.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

